Corrected CI routine

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,5 +19,5 @@ jobs:
             - name: Instalar dependências com o Poetry
               run: poetry install
 
-            - name: Rodar minha rotina de testes com o Poetry
-              run: poetry run pytest tests -v
+            - name: Rodar minha ETL
+              run: poetry run python .\app\etl.py
